cargo-features = ["strip"]
#[crate_type = "staticlib"]
[package]
name = "sap-lang"
version = "0.1.0"
edition = "2021"


[workspace]
members = ["sap-lang-repl", "sap"]

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
nom_locate = { version = "4", features = ["alloc"] }
nom = { version = "7", features = ["alloc"] }

# rustyline = "9.0.0"
