[package]
name = "sap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sap-lang = { path = "../" }
clap = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
quick-xml = { version = "0.22", features = ["serialize"] }
serde_yaml = "*"
